--- a/Tracker/TRTrackingOptionsTableViewCellMultiple.xib
+++ b/Tracker/TRTrackingOptionsTableViewCellMultiple.xib
@@ -6,13 +6,13 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TRTrackingOptionsViewController" customModule="Tracker" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TRTrackingOptionsTableViewIncrementStyleCell" customModule="Tracker" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="trackMultiple" rowHeight="60" id="242-Mp-gYp">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="trackMultiple" rowHeight="60" id="242-Mp-gYp" customClass="TRTrackingOptionsTableViewIncrementStyleCell" customModule="Tracker" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="242-Mp-gYp" id="Bsp-pv-6X2">
-                <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
+                <rect key="frame" x="0.0" y="0.0" width="600" height="59"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track Multiple" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NGm-fk-rr2">
@@ -27,6 +27,9 @@
                     <constraint firstItem="NGm-fk-rr2" firstAttribute="leading" secondItem="Bsp-pv-6X2" secondAttribute="leadingMargin" constant="14" id="j2A-ko-e1i"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="trackIncrementStyleLabel" destination="NGm-fk-rr2" id="Rdi-7O-6YH"/>
+            </connections>
             <point key="canvasLocation" x="-325" y="297"/>
         </tableViewCell>
     </objects>
